# nex-coding-tool

./: .gitignore  README.md  print_primes_till_10.py  print_primes_till_20.py  pyproject.toml
backend/: README.md  app.py  server.py
backend/static/: style.css
backend/templates/: index.html  login.html
frontend/: app.js  index.html  style.css
nex_coding/: __main__.py  cli.py  coding_agent.py  config.py  fs_safe.py  git_undo.py  session.py  shell.py  task_runner.py  ui.py
