[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nex-coding-tool"
version = "0.1.0"
description = "Terminal-based coding CLI (scaffold)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "pyfiglet",
    "tomli; python_version < '3.11'",
    "requests",
    "langgraph>=0.2.45",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]

[project.scripts]
nex-coding = "nex_coding.cli:main"
nex = "nex_coding.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nex_coding*"]
